tests/fail/capture_group_out_of_bounds.werk
let a = "ac" | match {
    "(a|b)(c|d)" => "{2}"
    "%" => error "no match"
}
